test/files/neg/bug677.check
bug677.scala:2: error: type mismatch;
 found   : () => scala.Int
 required: scala.Nothing
  val zx: Nothing = {() => 4}
                        ^
one error found
